--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ sass:
   style: compressed  
 
 uploads_dir: "assets/images"
-css_dir: "style"
+css_dir: "/style"
 
 comments:
  body_font_family: Add the font code block on the configurations menu
